# django-bolt

./: .gitignore  BENCHMARK_BASELINE.md  BENCHMARK_DEV.md  BOLT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Fast.md  Makefile  README.md  TODO.md  pyproject.toml  renovate.json  test_collector.py  test_openapi_errors.py
bench/: BENCHMARK_BASELINE.md  BENCHMARK_DEV.md
docs/: SERIALIZERS.md  zensical.toml
docs/src/: index.md
docs/src/getting-started/: deployment.md
docs/src/ref/: api.md  auth.md  responses.md  settings.md
docs/src/topics/: asgi-mounts.md  (+10 more)
python/django_bolt/: __init__.py  api.py  binding.py  concurrency.py  dependencies.py  enums.py  error_handlers.py  health.py  middleware_response.py  pagination.py  request_parsing.py  responses.py  serialization.py  typing.py
python/tests/: test_api_error_wire.py  test_asgi_mount.py  test_cookies.py  test_django_middleware_integration.py  test_django_middleware_loader.py  test_fresh_install.py  test_health.py  test_middleware.py  test_middleware_response.py  test_middleware_server.py  test_multi_response.py  test_multi_response_integration.py  test_openapi_docs.py  test_request_meta.py  test_response_model_priority.py  test_sync_functions.py  test_syntax.py
scripts/: benchmark.sh  benchmark_compare.py  benchmark_serializer.py  release.sh  sse_load.py
src/: asgi_http.rs  asgi_mounts.rs  handler.rs  lib.rs  metadata.rs  request.rs  request_pipeline.rs  response_builder.rs  response_meta.rs  router.rs  server.rs  state.rs  test_state.rs  testing.rs
src/middleware/: cors.rs
src/websocket/: handler.rs
(+32 files in other folders)
