[package]
name = "django-bolt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "django_bolt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py312"] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
actix-web = "4"
actix-http = "3"
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.6"
tokio = { version = "1", features = ["full"] }
socket2 = { version = "0.5", features = ["all"] }
matchit = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
mimalloc = { version = "0.1", default-features = false }
urlencoding = "2"
num_cpus = "1"
once_cell = "1"
futures-util = "0.3"
bytes = "1"
mime = "0.3"
url = "2"
tempfile = "3"
multer = "3"
